[tool.poetry]
name = "jupyter"
version = "0.1.0"
description = ""
authors = ["None"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.7"
ipykernel = "^6.13.1"
jupyterlab = "^3.4.3"
ginza = "^5.1.1"
ja-ginza = "^5.1.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
